--- a/Predicting Bike Rentals/Predicting Bike Rentals.ipynb
+++ b/Predicting Bike Rentals/Predicting Bike Rentals.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "Hadi Fanaee-T at the University of Porto compiled this data into a CSV file, which you'll be working with in this project. The file contains 17380 rows, with each row representing the number of bike rentals for a single hour of a single day. You can download the data from the University of California, Irvine's website. For more description about the columns see http://archive.ics.uci.edu/ml/datasets/Bike+Sharing+Dataset\n",
     "\n",
-    "From this data, can we predict the total number of bike rentals (cnt) based on the given predictor variables, such as season, year, month etc. We will try to do this using three different models: Linear Regression, Decision Tree, and Random Forest."
+    "From this data, can we predict the total number of bike rentals (cnt) based on the given predictor variables, such as season, year, month etc? We will try to do this using three different models: Linear Regression, Decision Tree, and Random Forest."
    ]
   },
   {
