Fixed spelling mistake

--- a/Fraud Detection Challenge/Fraud_Detection_Notebook.ipynb
+++ b/Fraud Detection Challenge/Fraud_Detection_Notebook.ipynb
@@ -7,7 +7,7 @@
     "id": "pWhBn3cktKab"
    },
    "source": [
-    "# Extracting The Country From The I.P Adress"
+    "# Extracting The Country From The I.P Address"
    ]
   },
   {
