Changed README title, and deleted .DS_Store

--- a/Digits Classifier/Digits Classifier From Scratch/README.ipynb
+++ b/Digits Classifier/Digits Classifier From Scratch/README.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classifying Digits Using mlspear"
+    "# Classifying Digits From Scratch"
    ]
   },
   {
