--- a/UC Berkeley Discrimination Lawsuit Case/Data_Analysis.ipynb
+++ b/UC Berkeley Discrimination Lawsuit Case/Data_Analysis.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "University of California, Berkeley is being sued because the prosecution claims that the university is discriminating against women who apply. They claim that the admission rate for men is higher than that of women. I have been task to analyse the data and present my findings to the Jury. Based on what I found, the answer might surprise you. Let me explain."
+    "University of California, Berkeley is being sued because the prosecution claims that the university is discriminating against women who apply to graduate school. They claim that the admission rate for men is higher than that of women. I have been task to analyse the data and present my findings to the Jury. Based on what I found, the answer might surprise you. Let me explain."
    ]
   },
   {
@@ -598,7 +598,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.5.1"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
