Renamed Convolutional VAE to Convolutional Variational Autoencoder

--- a/Generating Faces using a Convolutional VAE/Generating Faces Using a Convolutional VAE.ipynb
+++ b/Generating Faces using a Convolutional VAE/Generating Faces Using a Convolutional VAE.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generating Faces using a Convolutional VAE"
+    "# Generating Faces using a Convolutional Variational Autoencoder"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating A Convolutional VAE"
+    "## Creating A Convolutional Variational Autoencoder"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define Convolutional VAE"
+    "### Define Convolutional Variational Autoencoder"
    ]
   },
   {
