--- a/Generating Digits/Generating Digits using a Generative Adversarial Network/Generating Digits using a Generative Adversarial Network.ipynb
+++ b/Generating Digits/Generating Digits using a Generative Adversarial Network/Generating Digits using a Generative Adversarial Network.ipynb
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fashion MNIST Dataset"
+    "## MNIST Dataset"
    ]
   },
   {
