--- a/Generating Digits/Generating Digits using a Generative Adversarial Network/Generating Digits using a Generative Adversarial Network.ipynb
+++ b/Generating Digits/Generating Digits using a Generative Adversarial Network/Generating Digits using a Generative Adversarial Network.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define the Generative Adversarial Network Using The Discriminator and The Generator"
+    "### Define The Generative Adversarial Network Using The Discriminator and The Generator"
    ]
   },
   {
