--- a/Generating Fashion Items/Generating Fashion Items using a Generative Adversarial Network/Generating Fashion Items using a Generative Adversarial Network.ipynb
+++ b/Generating Fashion Items/Generating Fashion Items using a Generative Adversarial Network/Generating Fashion Items using a Generative Adversarial Network.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define the Generative Adversarial Network Using The Discriminator and The Generator"
+    "### Define The Generative Adversarial Network Using The Discriminator and The Generator"
    ]
   },
   {
