Refactored python code

--- a/Generating Faces/Generating Faces using a Convolutional Variational Autoencoder/Generating Faces Using a Convolutional Variational Autoencoder.ipynb
+++ b/Generating Faces/Generating Faces using a Convolutional Variational Autoencoder/Generating Faces Using a Convolutional Variational Autoencoder.ipynb
@@ -54,13 +54,8 @@
    "source": [
     "input_dim = (128, 128, 3)\n",
     "\n",
-    "encoder_conv_filters       = [32, 64, 64, 64]\n",
-    "encoder_conv_kernel_size   = [3, 3, 3, 3]\n",
-    "encoder_conv_strides       = [2, 2, 2, 2]\n",
-    "\n",
-    "decoder_conv_t_filters     = [64, 32, 32, 3]\n",
-    "decoder_conv_t_kernel_size = [3, 3, 3, 3]\n",
-    "decoder_conv_t_strides     = [2, 2, 2, 2]\n",
+    "encoder_conv_filters   = [32, 64, 64, 64]\n",
+    "decoder_conv_t_filters = [64, 32, 32, 3]\n",
     "\n",
     "z_dim = 200\n",
     "\n",
@@ -89,8 +84,8 @@
     "for i in range(4):\n",
     "    encoder_params = {\n",
     "        'filters': encoder_conv_filters[i],\n",
-    "        'kernel_size': encoder_conv_kernel_size[i],\n",
-    "        'strides': encoder_conv_strides[i],\n",
+    "        'kernel_size': 3,\n",
+    "        'strides': 2,\n",
     "        'padding': 'same',\n",
     "        'name': 'encoder_conv_' + str(i)\n",
     "    }\n",
@@ -129,8 +124,8 @@
     "for i in range(4):\n",
     "    decoder_params = {\n",
     "        'filters': decoder_conv_t_filters[i],\n",
-    "        'kernel_size': decoder_conv_t_kernel_size[i],\n",
-    "        'strides': decoder_conv_t_strides[i],\n",
+    "        'kernel_size': 3,\n",
+    "        'strides': 2,\n",
     "        'padding': 'same',\n",
     "        'name': 'decoder_conv_' + str(i)\n",
     "    }\n",
