--- a/Winning Jeopardy/Winning Jeopardy with Data Science.ipynb
+++ b/Winning Jeopardy/Winning Jeopardy with Data Science.ipynb
@@ -9,9 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "Jeopardy is a popular TV show in the US where participants answer questions to win money. It's been running for a few decades, and is a major force in popular culture.\n",
     "\n",
@@ -588,11 +586,11 @@
     {
      "data": {
       "text/plain": [
-       "[Power_divergenceResult(statistic=0.401962846126884, pvalue=0.5260772985705469),\n",
+       "[Power_divergenceResult(statistic=0.4448774816612795, pvalue=0.5047776487545996),\n",
        " Power_divergenceResult(statistic=0.401962846126884, pvalue=0.5260772985705469),\n",
-       " Power_divergenceResult(statistic=0.803925692253768, pvalue=0.3699222378079571),\n",
+       " Power_divergenceResult(statistic=0.4448774816612795, pvalue=0.5047776487545996),\n",
        " Power_divergenceResult(statistic=0.401962846126884, pvalue=0.5260772985705469),\n",
-       " Power_divergenceResult(statistic=0.803925692253768, pvalue=0.3699222378079571)]"
+       " Power_divergenceResult(statistic=0.03188116723440362, pvalue=0.8582887163235293)]"
       ]
      },
      "execution_count": 9,
@@ -611,7 +609,7 @@
     "    observed_high = high_low[0]\n",
     "    observed_low  = high_low[1]\n",
     "    \n",
-    "    total      = high_low[0] + high_low[1]\n",
+    "    total      = observed_high + observed_low\n",
     "    total_prop = total / len(jeopardy)\n",
     "    \n",
     "    expected_high = total_prop * high_value_count\n",
@@ -649,9 +647,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
