--- a/Dimensionality Reduction Using An Autoencoder/Dimensionality Reduction using an Autoencoder.ipynb
+++ b/Dimensionality Reduction Using An Autoencoder/Dimensionality Reduction using an Autoencoder.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dimensionality Reduction using an Autoencoder"
+    "# Dimensionality Reduction Using An Autoencoder"
    ]
   },
   {
