--- a/UC Berkeley Discrimination Lawsuit Case/Data_Analysis.ipynb
+++ b/UC Berkeley Discrimination Lawsuit Case/Data_Analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Is UCBerkely discriminating against women?"
+    "# Is UCBerkeley discriminating against women?"
    ]
   },
   {
@@ -602,5 +602,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
